--- a/111.html
+++ b/111.html
@@ -17,7 +17,7 @@ EcopsychologyVol. 11, | 2Original Articles
 </p>
 
 <pre>
-<font face="algerian"; size="3";>                                                                                                                                                      Who Is The Girl Whose Birthday Is On The Same Day As Rihanna?      </h2>
+                                                                                                                                                   Who Is The Girl Whose Birthday Is On The Same Day As Rihanna?      </h2>
 <title>C:\Users\Darms\Desktop\Новая папка</title>
 
 
@@ -25,7 +25,7 @@ EcopsychologyVol. 11, | 2Original Articles
                                                                                                                                              Yes, the author of this post hints to readers already thinking about gifts. just kidding,it would be impudent to
                                                                                                                         start with this post(The author will send you notifications that the birthday is coming soon).
 </font>
-</p>
+</pre>
 
 <title>C:\Users\Darms\Desktop\Новая папка</title>
 <head>
